# ft-sirius-case

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
app/: config.py  mailer.py  main.py  schemas.py
app/api/: routes_user.py
chatbot/config/: settings.py
chatbot/src/api/: main.py
chatbot/src/api/routes/: chat.py  prompt.py
chatbot/src/models/: schemas.py
chatbot/src/schemas/: chat.py  selection.py
chatbot/src/static/: script.js  style.css  styles.css
chatbot/src/templates/: chat.html  index.html
register_api/: Dockerfile  docker-compose.yml  pyproject.toml
register_api/app/: auth.py  database.py  mailer.py  models.py
register_api/app/api/: routes_user.py
requests_api/: .env  Dockerfile  Dockerfile.torch  docker-compose.yml  pyproject.toml  setup.py
requests_api/src/app/: config.py  main.py
requests_api/src/app/db/: connection.py
requests_api/src/app/models/: schemas.py
requests_api/src/app/routes/: requests.py  similarity.py
requests_api/src/app/utils/: logger.py
