[tool.poetry]
name = "requests-api"
version = "0.1.0"
description = "API для заявок"
authors = ["Your Name <your.email@example.com>"]
package-mode=false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
clickhouse-connect = "^0.6.20"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.0.3"
aiochclient = "^2.0.0"
aiohttp = "^3.9.3"
torch = "^2.6.0"
sentence-transformers = "^4.1.0"
openai = "^1.75.0"
hf-xet = "^1.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"